--- a/static/css/style_SD.css
+++ b/static/css/style_SD.css
@@ -157,7 +157,8 @@ input[type="radio"]:checked + label:before {
 
 .msg-text{
     position: absolute;
-    top:2%;
+    top:0%;
+    left: 20%;
     font-size: xx-large;
 }
 
