--- a/templates/index.html
+++ b/templates/index.html
@@ -218,7 +218,7 @@
           </div>
         </div>
         <div class="col-lg-8 mt-5 mt-lg-0">
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <form action="#" method="post" role="form" class="email-form">
             <div class="row">
               <div class="col-md-6 form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="이름" required>
@@ -228,17 +228,17 @@
               </div>
             </div>
             <div class="form-group mt-3">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="지참 보드게임 이름" required>
+              <input type="text" class="form-control" name="subject" id="subject" placeholder="지참 보드게임" required>
             </div>
             <div class="form-group mt-3">
-              <textarea class="form-control" name="message" rows="5" placeholder="보사모 지원동기 및 입단후포부를 경험에 빗대어 설명하시오 (500자이내)" required></textarea>
+              <textarea class="form-control" name="message" rows="5" placeholder="보드게임 동아리 지원동기 및 입단 후 포부를 경험에 빗대어 설명하시오 (500자이내)" required></textarea>
             </div>
             <div class="my-3">
               <div class="loading">Loading</div>
               <div class="error-message"></div>
               <div class="sent-message">Your message has been sent. Thank you!</div>
             </div>
-            <div class="text-center"><button type="submit">Send Message</button></div>
+            <div class="text-center"><button type="button">Send Message</button></div>
           </form>
 
         </div>
